--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,23 @@
 /*  your css code here. If applicable */
+
+body{
+	display :flex;
+	justify-content : center;
+	align-items : center;
+	height : 100 vh;
+	background-color: #111;
+	margin: 0;
+}
+
+.container{
+	display : grid;
+	grid-template-columns: repeat(30, 20px);
+	grid-gap : 7px;
+}
+
+.square{
+	width : 20px;
+	height : 20px;
+	background-color: #1d1d1d;
+	transition: background-color 1s ease;
+}
